--- a/login.html
+++ b/login.html
@@ -20,15 +20,17 @@
                     <span>｜</span>
                     <a href="">二维码登录</a>
                 </div>
-                <form action="php/login.php" method="POST" id="signupForm">
-                    <input type="text" id="uname" name="uname" placeholder="邮箱/Flyme号码">
-                    <br>
-                    <input type="text" id="pwd" name="pwd" placeholder="密码"><br>
-                    <input type="submit" value="登录">
-                </form>
-                <div class="f-footer">
-                    <a href="register.html">注册</a>
-                    <a href="">忘记密码？</a>
+                <div class="login-box">
+                    <form action="php/login.php" method="POST" id="signupForm">
+                        <input type="text" id="uname" name="telephone" placeholder="邮箱/Flyme号码">
+                        <br>
+                        <input type="password" id="pwd" name="pwd" placeholder="密码"><br>
+                        <input type="submit" value="登录">
+                    </form>
+                    <div class="f-footer">
+                        <a href="register.html">注册</a>
+                        <a href="">忘记密码？</a>
+                    </div>
                 </div>
             </div>
         </div>
