--- a/app/details.html
+++ b/app/details.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="./css/public.css">
     <link rel="stylesheet" href="./iconfont/iconfont.css">
     <link rel="stylesheet" href="./css/city.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_732107_mqsg6hqcwhj.css">
+    <link rel="stylesheet" href="./css/model.css">
     <style>
             li {
                 float: right;
@@ -214,7 +216,7 @@
                 </div>
                 <div class="property-buy-action">
                     <a href="#" class="btn-primary">立即购买</a>
-                    <a href="#" class="btn-empty">加入购物车</a>
+                    <a href="javascript:void(0);" class="btn-empty">加入购物车</a>
                 </div>
                 <!-- 弹窗 -->
                 <div class="window" id="center">
@@ -245,15 +247,15 @@
             <div class="first">
                 <ul>
                     <li>
-                        <a href=""><img src=".images/1_03.jpg" alt=""></a>
+                        <a href=""><img src="./images/1_03.jpg" alt=""></a>
                         <p>满80免运费</p>
                     </li>
                     <li>
-                        <a href=""><img src=".images/2_03.jpg" alt=""></a>
+                        <a href=""><img src="./images/2_03.jpg" alt=""></a>
                         <p>100+城市次日送达</p>
                     </li>
                     <li>
-                        <a href=""><img src=".images/3_03.jpg" alt=""></a>
+                        <a href=""><img src="./images/3_03.jpg" alt=""></a>
                         <p class="seven">7天无理由退货</p>
                     </li>
                     <li>
@@ -327,6 +329,7 @@
 <script src="./js/citySet.js"></script>
 <script src="./js/Popt.js"></script>
 <script src="./js/details.js"></script>
+<script src="./js/model.js"></script>
 <script type="text/javascript">
     $("#city").click(function (e) {
         SelCity(this, e);
@@ -338,9 +341,11 @@
     $(document).ready(function () {
         $(".btn-empty").click(function () {
             if($('.model').children().is('.model-style') && $('.network-type').children().is('.model-style') && $('.color-classification').children().is('.model-style') && $('.memory-capacity').children().is('.model-style') && $('.package').children().is('.model-style') && $('.periodization').children().is('.model-style')){
-                popCenterWindow();
+                var model = new Model();
+                model.success();
             }else{
-                alert('您有未选择的地方,请重新选择!');
+                var model = new Model();
+                model.error();
             }
         });
     }); 
