--- a/app/index.html
+++ b/app/index.html
@@ -48,7 +48,7 @@
             </div>
             <div class="shopCar">
                 <a href=""><i class="iconfont icon-gouwuche1"></i></a>
-                <em>0</em>
+                <em class="show-num">0</em>
             </div>
         </div>
         </div>
@@ -670,10 +670,12 @@
     <script src="js/index.js"></script>
     <script src="js/jsonp.js"></script>
     <script src="js/search.js"></script>
+    <script src="./js/shopCar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.js"></script>
     <script>
         index.init('.header-con');
         search.init('.sousuo');
+        shopCar.init();
     </script>
     <script>
             var swiper = new Swiper('.swiper-container', {
